fixing social icons bar scroll glitch on mobile browsers (Safari and Chrome work okay, but not Brave or Google)

--- a/src/styles/pages/_index.scss
+++ b/src/styles/pages/_index.scss
@@ -315,8 +315,7 @@ section#blog {
 
   .social-icons-sidebar {
     position: absolute;
-    top: unset;
-    bottom: 2.5vh;
+    top: calc(95vh - 2.5vh);
     width: 90%;
     margin: 0 auto;
     height: auto;
